--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>SigBio-Shiny</title>
     <meta charset="utf-8" />
     <meta name="author" content="Sangram Kesahri Sahu" />
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/metropolis.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/metropolis-fonts.css" rel="stylesheet" />
     <link rel="stylesheet" href="footer-header.css" type="text/css" />
   </head>
   <body>
@@ -11,7 +14,7 @@
 class: center, middle, inverse, title-slide
 
 # SigBio-Shiny
-## A standalone interactive application for detecting biological significance on a Gene-Set.
+## A standalone interactive application for detecting biological significance on a Gene-Set
 ### <a href="https://sksahu.net">Sangram Kesahri Sahu</a>
 ### Bangalore, India
 ### 2020/07/01 (Updated: 2020-07-05)
@@ -21,13 +24,13 @@ class: center, middle, inverse, title-slide
 
 layout: true
 
-&lt;div class="my-footer"&gt;&lt;span&gt;xaringan power    
-&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;
-&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;
+&lt;div class="my-footer"&gt;&lt;span&gt;
+https://sksahu.net/sigbio-shiny-slides    
+&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&lt;/span&gt;&lt;/div&gt; 
 
 ---
 
-## Outlines
+# Outlines
 
 - What is detecting Biological Significance on a Gene-Set means?
 - Some of available resources
@@ -40,18 +43,18 @@ layout: true
 
 ---
 
-## Biological Significance on a Gene-Set
+# Biological Significance on a Gene-Set
 
 ![](img/geneset-analysis-overview.png)
 ---
 
-## Some of available resources 
+# Some of available resources 
 
 ![](img/geneset-other-resource.png)
 
 ---
 
-## Ideal scenarios for a gene-set based analysis
+# Ideal scenarios for a gene-set based analysis
 
 .pull-left[
 - An organism database
@@ -64,7 +67,7 @@ layout: true
   - **Programmatic access** alongside GUI
   - Result interpretability with **plots**
 
-**While most available resources support some of above criteria but not all.**
+***While most available resources support some of above criteria but not all.***
 
 ]
 
@@ -74,20 +77,20 @@ layout: true
 
 ---
 
-## SigBio-Shiny Overview
+# SigBio-Shiny Overview
 
 SigBio-Shiy provides a standalone R-Shiny based GUI application for doing such geneset based analysis. Build on top of already available open-source infrastructure, Such as - 
 
 ![](img/SigBio-Shiny-Overview.png)
 ---
 
-## SigBio-Shiny Structure
+# SigBio-Shiny Structure
 
 ![](img/SigBio-Shiny-Structure.png)
 
 ---
 
-## SigBio-Shiny Features
+# SigBio-Shiny Features
 
 - Run time **downloading of selected organism database** with keeping a log for reproducibility. (with [AnnotationHub])
 - **Gene ID mapping** from different database. (with [AnnotationDbi])
@@ -101,14 +104,14 @@ SigBio-Shiy provides a standalone R-Shiny based GUI application for doing such g
 [pathview]: https://bioconductor.org/packages/release/bioc/html/pathview.html
 [enrichplot]: https://www.bioconductor.org/packages/release/bioc/html/enrichplot.html
 
-### Work in progress
+## Work in progress
 
 - Directly launch with R objects from certain packages like DESeq2
 - Complete **reproducible R-script** in the end of an analysis.
 
 ---
 
-## SigBio-Shiny Demo
+# SigBio-Shiny Demo
 
 &lt;div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"&gt;
 &lt;iframe src="https://www.youtube.com/embed/Ij-pPLaXUAc" style="position: absolute; top: 0; left: 0; width: 100%; height: 90%; border:0;" allowfullscreen&gt;&lt;/iframe&gt;
@@ -116,15 +119,15 @@ SigBio-Shiy provides a standalone R-Shiny based GUI application for doing such g
 
 ---
 
-## SigBio-Shiny New UI
+# SigBio-Shiny New UI
 
 ![](img/screenshots/screenshot-new-1.png)
 
 ---
 
-## SigBio-Shiny Usage
+# SigBio-Shiny Usage
 
-- Download as R-package and launch into browser directly from R console 
+- Download as **R-package** and launch into browser directly from R console 
 
 
 ```r
@@ -133,14 +136,14 @@ SigBio::runApp() # Load the shiny application in browser
 SigBio::runApp(res) # work in progress
 ```
 
-- Download as a single R-script for Shiny-Server deploy 
+- Download as a **single R-script** for Shiny-Server deploy 
 
 
 ```bash
 wget https://raw.githubusercontent.com/sk-sahu/sig-bio-shiny/master/inst/app/app.R -O sig-bio-shiny-app.R
 ```
 
-- Also can be run from a readily available docker container.
+- Also can be run from a readily available **docker container**.
 
 
 ```bash
@@ -151,7 +154,7 @@ docker run --user shiny --rm -p 80:3838 sudosk/sig-bio-shiny:latest
 
 ---
 
-## SigBio-Shiny Modular Design
+# SigBio-Shiny Modular Design
 
 ![](img/SigBio-Shiny-Modular.png)
 
@@ -159,7 +162,7 @@ Build on a modular approach such that adding a new package/functionality is easy
 
 ---
 
-## Thank you 
+# Thank you 
 
 Project Github - https://github.com/sk-sahu/sig-bio-shiny/
 
@@ -170,12 +173,15 @@ Feedback
 - [Project's Gitter chat room](https://gitter.im/sig-bio-shiny/community)
 
 - Or directly reach me on twitter [@sangram_ksahu](https://twitter.com/sangram_ksahu)
+
+This Side URL: [https://sksahu.net/sigbio-shiny-slide](https://sksahu.net/sigbio-shiny-slides)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
 "highlightLines": true,
-"highlightStyle": "github"
+"highlightStyle": "github",
+"countIncrementalSlides": false
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
