--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 class: center, middle, inverse, title-slide
 
 # SigBio-Shiny
-## A standalone interactive application for detecting biological significance on a Gene-Set
+## A standalone interactive application for detecting biological significance on a GeneSet
 ### <a href="https://sksahu.net">Sangram Kesahri Sahu</a>
 ### Bangalore, India
 ### 2020/07/01 (Updated: 2020-07-05)
@@ -32,18 +32,18 @@ https://sksahu.net/sigbio-shiny-slides
 
 # Outlines
 
-- What is detecting Biological Significance on a Gene-Set means?
+- What is detecting Biological Significance on a GeneSet means?
 - Some of available resources
-- Ideal scenarios for a gene-set based analysis
+- Ideal scenarios for a GeneSet analysis
 - SigBio-Shiny Overview
 - Features
-- Screenshots
 - Usage
+- Screenshots/Demo
 - Modular Design for developers
 
 ---
 
-# Biological Significance on a Gene-Set
+# Biological Significance on a GeneSet
 
 ![](img/geneset-analysis-overview.png)
 ---
@@ -54,7 +54,7 @@ https://sksahu.net/sigbio-shiny-slides
 
 ---
 
-# Ideal scenarios for a gene-set based analysis
+# Ideal scenarios for a GeneSet analysis
 
 .pull-left[
 - An organism database
@@ -79,7 +79,7 @@ https://sksahu.net/sigbio-shiny-slides
 
 # SigBio-Shiny Overview
 
-SigBio-Shiy provides a standalone R-Shiny based GUI application for doing such geneset based analysis. Build on top of already available open-source infrastructure, Such as - 
+SigBio-Shiny provides a standalone R-Shiny based GUI application for doing such GeneSet based analysis. Build on top of already available **open-source infrastructure**, Such as - 
 
 ![](img/SigBio-Shiny-Overview.png)
 ---
@@ -108,20 +108,6 @@ SigBio-Shiy provides a standalone R-Shiny based GUI application for doing such g
 
 - Directly launch with R objects from certain packages like DESeq2
 - Complete **reproducible R-script** in the end of an analysis.
-
----
-
-# SigBio-Shiny Demo
-
-&lt;div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"&gt;
-&lt;iframe src="https://www.youtube.com/embed/Ij-pPLaXUAc" style="position: absolute; top: 0; left: 0; width: 100%; height: 90%; border:0;" allowfullscreen&gt;&lt;/iframe&gt;
-&lt;/div&gt;
-
----
-
-# SigBio-Shiny New UI
-
-![](img/screenshots/screenshot-new-1.png)
 
 ---
 
@@ -154,19 +140,35 @@ docker run --user shiny --rm -p 80:3838 sudosk/sig-bio-shiny:latest
 
 ---
 
+# SigBio-Shiny Demo
+
+&lt;div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"&gt;
+&lt;iframe src="https://www.youtube.com/embed/Ij-pPLaXUAc" style="position: absolute; top: 0; left: 0; width: 100%; height: 90%; border:0;" allowfullscreen&gt;&lt;/iframe&gt;
+&lt;/div&gt;
+
+---
+
+# SigBio-Shiny New UI
+
+![](img/screenshots/screenshot-new-1.png)
+
+---
+
 # SigBio-Shiny Modular Design
 
 ![](img/SigBio-Shiny-Modular.png)
 
-Build on a modular approach such that adding a new package/functionality is easy for a contributors. 
+Build on a modular approach such that adding a new package/functionality is easy for a developers.
 
 ---
 
+.center[
 # Thank you 
+]
 
 Project Github - https://github.com/sk-sahu/sig-bio-shiny/
 
-Feedback 
+Open to Feedback or Contributions
 
 - [Project's GitHub Issue section](https://github.com/sk-sahu/sig-bio-shiny/issues) 
 
